--- a/styles.css
+++ b/styles.css
@@ -123,17 +123,6 @@ nav ul.active {
     margin-top: 22vh;
 }
 
-.hero-content {
-    transform: translateY(50px);
-    opacity: 1;
-    transition: transform 1s ease-out, opacity 1s ease-out;
-}
-
-.hero-content.visible {
-    transform: translateY(0);
-    opacity: 1;
-}
-
 body.night .hero-content {
     color: var(--moon-color);
 }
@@ -503,7 +492,6 @@ body.night .cursor-dot {
   
 .card button:hover {
     opacity: 0.7;
-
 }
 
 .card img {
@@ -517,25 +505,35 @@ body.night .cursor-dot {
 
 .about img {
     float: left;
+    overflow: hidden;
 }
 
 ul.icons {
-    display:inline-flex;
+    display: inline-flex;
     left: 50%;
     list-style-type: none;
 }
 
-.icon {
+.icons > li {
     border: 3px solid var(--moon-color);
     border-radius: 50%;
+    text-decoration: none;
     color: var(--moon-color);
     background-color: var(--main-green);
     font-size: 2.2vh;
     padding: 12px 16px;
     margin: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.icon:hover {
+.icons > a {
+    text-decoration: none;
+}
+
+.icons>li:hover {
     color: var(--main-green);
     background-color: var(--moon-color);
+    cursor: pointer;
 }
