--- a/styles.css
+++ b/styles.css
@@ -226,7 +226,7 @@ body.night .moon {
 
 .hehe {
     font-family: "Architects Daughter", sans-serif;
-    font-size: 3.5vh;
+    font-size: 2vh;
 }
 
 @media (max-width: 400px) {
@@ -481,6 +481,28 @@ ul.icons li i:hover {
     color: var(--main-green);
 }
 
+ul.icons li i:visited {
+    color: var(--moon-color);
+}
+
 .aboutus {
     background-color: var(--main-dark);
+}
+
+.contact {
+    background-color: var(--main-black);
+    color: var(--moon-color);
+    padding: 60px;
+    border-top: 3px solid var(--moon-color);
+    text-align: justify;
+}
+
+.box {
+    height: 250px;
+    width: 250px;
+    background-color: var(--main-dark);
+    box-shadow: 0px 7px 15px rgba(0, 0, 0, 0.7);
+    border-radius: 15px ;
+    margin: 10px;
+    display: inline-block;
 }
