--- a/styles.css
+++ b/styles.css
@@ -25,23 +25,27 @@ body {
 
 body.night {
     background-color: var(--night-sky);
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    padding: 18px;
     background-color: rgba(44,62,80,0.2);
     border-bottom: 2px solid var(--main-white);
-    transition: background-color 0.5s ease;
     position: sticky;
     top: 0;
     z-index: 100;
 }
 
 body.night header {
-    background-color: rgba(44,62,80,0.85);
+    background-color: rgba(44,62,80,0.9);
+    top: 0;
 }
 
 .logo {
@@ -112,14 +116,16 @@ nav ul.active {
 .hero-content {
     font-family: "Architects Daughter", sans-serif;
     font-size: 3vh;
-    margin-top: 25vh;
+    margin-top: 28vh;
     position: relative;
     z-index: 2;
 }
 
 body.night .hero-content {
     color: var(--moon-color);
-    background-color: rgba(44,62,80,0.9);
+    background-color: rgba(184, 192, 184, 0.4);
+    border-radius: 20px;
+    padding: 20px;
 }
 
 .hero-content span {
@@ -139,6 +145,10 @@ body.night .hero-content {
     height: 100%;
     pointer-events: none;
     overflow: hidden;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .cloud {
@@ -219,6 +229,10 @@ body.night .sun {
 body.night .moon {
     opacity: 1;
     display: block;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #menu-items.active {
@@ -296,10 +310,6 @@ body.night .moon {
         box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.09);
     }
 
-    .about {
-        padding: 55px;
-    }
-
     .hehe {
         font-size: 2.3vh;
     }
@@ -314,6 +324,10 @@ body.night .sky {
     top: 0;
     left: 0;
     transition: 2s ease-in-out;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 body.night .stars {
@@ -327,6 +341,10 @@ body.night .stars {
     display: block;
     background: url('http://www.script-tutorials.com/demos/360/images/stars.png') repeat top center;
     z-index: 0;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 body.night h3 {
@@ -337,6 +355,10 @@ body.night h3 {
     margin: 5rem auto;
     line-height: 3rem;
     letter-spacing: 5px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 body.night nav ul li a {
@@ -384,16 +406,16 @@ body.night nav ul {
 .about {
     background-color: var(--main-green);
     color: var(--main-white);
-    padding: 50px;
     width: 100%;
-    display: grid;
-    place-items: center;
-    align-items: center;
     overflow: hidden;
     padding: 50px;
     margin: 0;
     border-top: 4px solid var(--main-white);
     text-align: justify;
+}
+
+.about > p {
+    padding: 50px;
 }
 
 body.night .cursor-dot {
@@ -460,10 +482,8 @@ body.night .cursor-dot {
 }
 
 .about > img {
-    float: right;
-    overflow: hidden;
-    margin: 0;
-    padding: 0;
+    position: relative;
+    right: 50%;
 }
 
 ul.icons {
@@ -492,7 +512,7 @@ ul.icons {
 
 ul.icons li i:hover {
     background-color: var(--moon-color);
-    color: var(--main-green);
+    color: rgb(13, 139, 13);
 }
 
 ul.icons li i:visited {
@@ -542,3 +562,25 @@ ul.icons li i:visited {
    background: #41617D !important; 
  }
 
+.sign-in {
+    background-color: var(--main-green);
+    color: var(--moon-color);
+    border: 2px solid var(--moon-color);
+    border-radius: 15px;
+    padding: 10px 110px;
+    left: 50%;
+    margin-top: 30px;
+    font-family: "Anek Devanagari", sans-serif;
+    font-size: 2vh;
+    font-weight: 400;
+}
+
+.sign-in:hover {
+    background-color: var(--moon-color);
+    color: rgb(13, 139, 13);
+}
+
+.img-fluid {
+    position: relative;
+    left: 50%;
+}
