--- a/styles.css
+++ b/styles.css
@@ -83,8 +83,7 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: var(--main-blue);
-    background-color: var(--main-white);
+    background-color: rgba(184, 192, 184, 0.4);
     border: 3px solid transparent;
     padding: 7px 20px;
     border-radius: 25px;
@@ -100,9 +99,6 @@ nav ul li a:hover {
 
 nav ul.active {
     display: block !important;
-    float: left;
-    background-color: var(--moon-color);
-    color: var(--night-sky);
 }
 
 .hero {
@@ -116,7 +112,7 @@ nav ul.active {
 .hero-content {
     font-family: "Architects Daughter", sans-serif;
     font-size: 3vh;
-    margin-top: 28vh;
+    margin-top: 30vh;
     position: relative;
     z-index: 2;
 }
@@ -142,7 +138,7 @@ body.night .hero-content {
 }
 .tree-1 {
     position: relative;
-    top: 22px;
+    top: 22.5px;
 }
 
 .floating-clouds {
@@ -257,18 +253,18 @@ body.night .moon {
     }
     .about > img {
         height: 160px;
-        left: 40px;
+        left: 80px;
         float: left;
     }
 
     .courses > img {
         height: 160px;
-        left: 40px;
+        left: 80px;
     }
 
     .games > img {
         height: 170px;
-        left: 40px;
+        left: 80px;
     }
 
     .sign-in {
@@ -368,7 +364,7 @@ body.night .stars {
     right: 0;
     bottom: 0;
     width: 100%;
-    height: 90%;
+    height: 84%;
     display: block;
     background: url('http://www.script-tutorials.com/demos/360/images/stars.png') repeat top center;
     z-index: 0;
@@ -452,7 +448,7 @@ body.night .cursor-dot {
 
 .stone {
     position: relative;
-    top: 34px;
+    top: 34.5px;
 }
 
 .courses {
@@ -487,14 +483,8 @@ body.night .cursor-dot {
     font-size: 3.5vh;
     clear: both;
     display: inline-block;
-    margin-bottom: 10px; 
-}
-
-.games-heading {
-    font-size: 3.5vh;
-    clear: both;
-    display: inline-block;
-    margin-bottom: 10px; 
+    margin-bottom: 10px;
+    border-bottom: 1px solid var(--moon-color); 
 }
 
 .button-about {
@@ -503,7 +493,7 @@ body.night .cursor-dot {
     transition: 0.4s;
     border: 1px solid var(--moon-color);
     border-radius: 26px;
-    padding: 12px;
+    padding: 11px 17px;
     text-decoration: none;
 }
 
@@ -518,7 +508,7 @@ body.night .cursor-dot {
     transition: 0.4s;
     border: 1px solid var(--moon-color);
     border-radius: 26px;
-    padding: 12px;
+    padding: 11px 17px;
     text-decoration: none;
 }
 
@@ -533,7 +523,7 @@ body.night .cursor-dot {
     transition: 0.4s;
     border: 1px solid var(--moon-color);
     border-radius: 26px;
-    padding: 12px;
+    padding: 11px 17px;
     text-decoration: none;
 }
 
@@ -562,11 +552,29 @@ body.night .cursor-dot {
 
 .games {
     background: linear-gradient(120deg, #3299cc, #333333) ;
-    border-top: 2px solid var(--moon-color);
+    border-top: 3px solid var(--moon-color);
     color: var(--moon-color);
     margin: 0;
     text-align: justify;
     padding: 50px 60px;
+}
+
+.course-list {
+    background: linear-gradient(120deg, #008000, #333333) ;
+    border-top: 3px solid var(--moon-color);
+    color: var(--moon-color);
+    margin: 0;
+    text-align: justify;
+    padding: 50px 60px;    
+}
+
+.contact {
+    background: var(--main-black) ;
+    border-top: 3px solid var(--moon-color);
+    color: var(--moon-color);
+    margin: 0;
+    text-align: justify;
+    padding: 50px 60px;    
 }
 
 ul.icons {
@@ -622,11 +630,14 @@ a:visited {
 .box {
     height: 220px;
     width: 220px;
-    background-color: var(--night-sky);
+    display: inline-block;
+    justify-content: center;
+    align-items: center;
+    background-color: #1D1E22;
     box-shadow: 0px 7px 15px rgba(0, 0, 0, 0.7);
+    border: 2px solid white;
     border-radius: 15px ;
     margin: 20px 10px;
-    display: inline-block;
 }
 
 ::-webkit-scrollbar {
@@ -657,7 +668,7 @@ a:visited {
     border-radius: 15px;
     padding: 10px 110px;
     left: 50%;
-    margin-top: 30px;
+    margin-top: 15px;
     font-family: "Anek Devanagari", sans-serif;
     font-size: 2vh;
     font-weight: 400;
@@ -672,3 +683,4 @@ a:visited {
     position: relative;
     left: 50%;
 }
+
