--- a/styles.css
+++ b/styles.css
@@ -449,8 +449,9 @@ body.night nav ul li a:hover {
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.09);
 }
 
-body.night nav ul li a:hover {
+body.day nav ul li a:hover {
     background-color: rgba(167,214,220,0.9) ;
+    color: var(--main-white);
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.09);
 }
 
@@ -490,6 +491,10 @@ body.day nav ul {
     border-radius: 50%;
     z-index: 101;
     pointer-events: none;
+}
+
+.hidden {
+    display: none;
 }
 
 .about {
